Fixing bugs, adding patterns, cleaning code