@@ -11,9 +11,6 @@ import api.mpba.rastvdmy.exception.ApplicationException;
 import api.mpba.rastvdmy.service.UserProfileService;
 import jakarta.servlet.http.HttpServletRequest;
 import lombok.extern.slf4j.Slf4j;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
@@ -29,6 +26,7 @@ import jakarta.validation.Valid;
 import java.util.List;
 import java.util.UUID;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 
 /**
  * The UserProfileController handles all operations related to user profiles in the application.
@@ -39,17 +37,15 @@ import java.util.function.Function;
 @RestController
 @RequestMapping(path = "/api/v1/users")
 public class UserProfileController {
-    private static final Logger LOG = LoggerFactory.getLogger(UserProfileController.class);
     private final UserProfileService userProfileService;
     private final UserProfileMapper userProfileMapper;
 
     /**
-     * Constructor for UserProfileController.
+     * Constructs a UserProfileController with the specified user profile service and user profile mapper.
      *
-     * @param userProfileService The UserProfileService to be used.
-     * @param userProfileMapper  The UserProfileMapper to be used.
+     * @param userProfileService the user profile service
+     * @param userProfileMapper  the user profile mapper
      */
-    @Autowired
     public UserProfileController(UserProfileService userProfileService, UserProfileMapper userProfileMapper) {
         this.userProfileService = userProfileService;
         this.userProfileMapper = userProfileMapper;
@@ -57,20 +53,180 @@ public class UserProfileController {
 
     /**
      * Retrieves all user profiles.
-     * Only accessible by users with the ADMIN role.
      *
      * @param request the HTTP request
-     * @return a list of UserProfileResponse containing user profile details
+     * @return a list of user profile responses
      */
     @PreAuthorize("hasRole('ROLE_ADMIN')")
-    @ResponseStatus(HttpStatus.OK)
     @GetMapping(produces = "application/json")
     public ResponseEntity<List<UserProfileResponse>> getUsers(HttpServletRequest request) {
         logInfo("Getting all users ...");
-        List<UserProfile> userProfiles = userProfileService.getUsers(request);
-        List<UserProfileResponse> userProfileResponse = userProfiles.stream().map(getUserProfileResponse()
-        ).toList();
-        return ResponseEntity.ok(userProfileResponse);
+        return ResponseEntity.ok(userProfileService.getUsers(request)
+                .stream()
+                .map(getUserProfileResponse())
+                .collect(Collectors.toList()));
+    }
+
+    /**
+     * Retrieves the profile of the currently authenticated user.
+     *
+     * @param request the HTTP request
+     * @return the user profile response
+     */
+    @PreAuthorize("hasAnyRole('ROLE_DEFAULT', 'ROLE_ADMIN')")
+    @GetMapping(path = "/me", produces = "application/json")
+    public ResponseEntity<UserProfileResponse> getUser(HttpServletRequest request) {
+        return ResponseEntity.ok(getUserProfileResponse().apply(userProfileService.getUser(request)));
+    }
+
+    /**
+     * Retrieves a user profile by user ID.
+     *
+     * @param request the HTTP request
+     * @param userId  the ID of the user
+     * @return the user profile response
+     */
+    @PreAuthorize("hasRole('ROLE_ADMIN')")
+    @GetMapping(path = "/{id}", produces = "application/json")
+    public ResponseEntity<UserProfileResponse> getUserById(HttpServletRequest request,
+                                                           @PathVariable("id") UUID userId) {
+        logInfo("Getting user info ...");
+        return ResponseEntity.ok(getUserProfileResponse().apply(userProfileService.getUserById(request, userId)));
+    }
+
+    /**
+     * Filters and sorts user profiles.
+     *
+     * @param request the HTTP request
+     * @param page    the page number
+     * @param size    the page size
+     * @param sort    the sort order
+     * @return a page of user profile responses
+     */
+    @PreAuthorize("hasRole('ROLE_ADMIN')")
+    @GetMapping(path = "/filter", produces = "application/json")
+    public ResponseEntity<Page<UserProfileResponse>> filterAndSortUsers(
+            HttpServletRequest request,
+            @RequestParam(value = "page", defaultValue = "0") int page,
+            @RequestParam(value = "size", defaultValue = "10") int size,
+            @RequestParam(value = "sort", defaultValue = "asc") String sort) {
+        logInfo("Filtering users ...");
+        Pageable pageable = createPageable(page, size, sort);
+        Page<UserProfile> users = userProfileService.filterAndSortUsers(request, pageable);
+        return ResponseEntity.ok(users.map(getUserProfileResponse()));
+    }
+
+    /**
+     * Updates the profile of the currently authenticated user.
+     *
+     * @param request       the HTTP request
+     * @param updateRequest the user update request
+     * @return the user token response
+     * @throws Exception if an error occurs during the update
+     */
+    @PreAuthorize("hasRole('ROLE_DEFAULT')")
+    @PatchMapping(path = "/me", consumes = "application/json", produces = "application/json")
+    public ResponseEntity<UserTokenResponse> updateUser(HttpServletRequest request,
+                                                        @Valid @RequestBody
+                                                        UserUpdateRequest updateRequest) throws Exception {
+        logInfo("Updating user data ...");
+        return generateUserTokenResponse(userProfileService.updateUser(request, updateRequest));
+    }
+
+    /**
+     * Updates specific credentials of a user by user ID.
+     *
+     * @param request       the HTTP request
+     * @param userId        the ID of the user
+     * @param updateRequest the admin update user request
+     * @return the user token response
+     */
+    @PreAuthorize("hasRole('ROLE_ADMIN')")
+    @PatchMapping(path = "/{id}", consumes = "application/json", produces = "application/json")
+    public ResponseEntity<UserTokenResponse> updateUserSpecificCredentials(HttpServletRequest request,
+                                                                           @PathVariable("id") UUID userId,
+                                                                           @Valid @RequestBody
+                                                                           AdminUpdateUserRequest updateRequest) {
+        logInfo("Updating specific user credentials ...");
+        return generateUserTokenResponse(
+                userProfileService.updateUserSpecificCredentials(request, userId, updateRequest));
+    }
+
+    /**
+     * Manages the avatar of the currently authenticated user.
+     *
+     * @param request    the HTTP request
+     * @param action     the action to perform (upload or remove)
+     * @param userAvatar the user avatar file
+     * @return the user token response
+     */
+    @PreAuthorize("hasRole('ROLE_DEFAULT')")
+    @PatchMapping(path = "/me/avatar", consumes = "multipart/form-data", produces = "application/json")
+    public ResponseEntity<UserTokenResponse> manageUserAvatar(HttpServletRequest request,
+                                                              @RequestParam("action") String action,
+                                                              @RequestParam(value = "user_avatar", required = false)
+                                                              MultipartFile userAvatar) {
+        handleUserAvatarAction(request, action, userAvatar);
+        return generateUserTokenResponse(userProfileService.getUser(request));
+    }
+
+    /**
+     * Updates the role of a user by user ID.
+     *
+     * @param request the HTTP request
+     * @param userId  the ID of the user
+     * @return a response entity with no content
+     */
+    @PreAuthorize("hasRole('ROLE_ADMIN')")
+    @PatchMapping(path = "/role/{id}", produces = "application/json")
+    public ResponseEntity<Void> updateUserRole(HttpServletRequest request, @PathVariable("id") UUID userId) {
+        logInfo("Updating user role ...");
+        userProfileService.updateUserRole(request, userId);
+        return ResponseEntity.noContent().build();
+    }
+
+    /**
+     * Updates the status of a user by user ID.
+     *
+     * @param request the HTTP request
+     * @param userId  the ID of the user
+     * @return a response entity with no content
+     */
+    @PreAuthorize("hasRole('ROLE_ADMIN')")
+    @PatchMapping(path = "/status/{id}", produces = "application/json")
+    public ResponseEntity<Void> updateUserStatus(HttpServletRequest request, @PathVariable("id") UUID userId) {
+        logInfo("Updating user status ...");
+        userProfileService.updateUserStatus(request, userId);
+        return ResponseEntity.noContent().build();
+    }
+
+    /**
+     * Deletes the profile of the currently authenticated user.
+     *
+     * @param request the HTTP request
+     * @return a response entity with no content
+     */
+    @PreAuthorize("hasRole('ROLE_DEFAULT')")
+    @DeleteMapping(path = "/me")
+    public ResponseEntity<Void> deleteMyProfile(HttpServletRequest request) {
+        logInfo("Deleting user ...");
+        userProfileService.deleteUser(request);
+        return ResponseEntity.noContent().build();
+    }
+
+    /**
+     * Deletes a user profile by user ID.
+     *
+     * @param request the HTTP request
+     * @param userId  the ID of the user
+     * @return a response entity with no content
+     */
+    @PreAuthorize("hasRole('ROLE_ADMIN')")
+    @DeleteMapping(path = "/{id}")
+    public ResponseEntity<Void> deleteUserProfile(HttpServletRequest request, @PathVariable("id") UUID userId) {
+        logInfo("Deleting user ...");
+        userProfileService.deleteUserByEmail(request, userId);
+        return ResponseEntity.noContent().build();
     }
 
     /**
@@ -82,227 +238,77 @@ public class UserProfileController {
      * @return a Function that takes a UserProfile and returns a UserProfileResponse
      */
     private Function<UserProfile, UserProfileResponse> getUserProfileResponse() {
-        return user -> userProfileMapper.toResponse(
-                new UserProfileRequest(
-                        user.getId(),
-                        user.getName(),
-                        user.getSurname(),
-                        user.getDateOfBirth(),
-                        user.getCountryOfOrigin(),
-                        user.getEmail(),
-                        user.getPassword(),
-                        user.getPhoneNumber(),
-                        user.getAvatar(),
-                        user.getStatus(),
-                        user.getRole()
-                )
-        );
+        return user -> userProfileMapper.toResponse(convertToUserRequest(user));
     }
 
     /**
-     * Filters and sorts user profiles based on the specified parameters.
-     * Only accessible by users with the ADMIN role.
+     * Generates a user token response.
      *
-     * @param request the HTTP request
-     * @param page    the page number to retrieve (default is 0)
-     * @param size    the size of the page (default is 10)
-     * @param sort    the sorting order can be 'asc' or 'desc' (default is 'asc')
-     * @return a paginated list of UserProfileResponse
+     * @param userProfile the user profile
+     * @return the user token response
      */
-    @PreAuthorize("hasRole('ROLE_ADMIN')")
-    @ResponseStatus(HttpStatus.OK)
-    @GetMapping(path = "/filter", produces = "application/json")
-    public ResponseEntity<Page<UserProfileResponse>> filterAndSortUsers(
-            HttpServletRequest request,
-            @RequestParam(value = "page", defaultValue = "0") int page,
-            @RequestParam(value = "size", defaultValue = "10") int size,
-            @RequestParam(value = "sort", defaultValue = "asc") String sort) {
-        logInfo("Filtering users ...");
-        PageableState pageableState = parseSortOption(sort.trim().toLowerCase());
-        Pageable pageable = switch (pageableState) {
-            case ASC -> {
-                logInfo("Sorting users by name in ascending order ...");
-                yield PageRequest.of(page, size, Sort.by("name").ascending());
-            }
-            case DESC -> {
-                logInfo("Sorting users by name in descending order ...");
-                yield PageRequest.of(page, size, Sort.by("name").descending());
-            }
-        };
-        Page<UserProfile> users = userProfileService.filterAndSortUsers(request, pageable);
-        Page<UserProfileResponse> userResponses = users.map(getUserProfileResponse()
-        );
-        return ResponseEntity.ok(userResponses);
+    private ResponseEntity<UserTokenResponse> generateUserTokenResponse(UserProfile userProfile) {
+        return ResponseEntity.ok(new UserTokenResponse(userProfileService.generateToken(userProfile)));
     }
 
     /**
-     * Parses the sorting option from the request.
+     * Converts a UserProfile object to a UserProfileRequest object.
      *
-     * @param sortOption the sort option as a string
-     * @return the corresponding PageableState
-     * @throws ApplicationException if the sort option is invalid
+     * @param user the user profile
+     * @return the user profile request
+     */
+    private UserProfileRequest convertToUserRequest(UserProfile user) {
+        return new UserProfileRequest(
+                user.getId(),
+                user.getName(),
+                user.getSurname(),
+                user.getDateOfBirth(),
+                user.getCountryOfOrigin(),
+                user.getEmail(),
+                user.getPassword(),
+                user.getPhoneNumber(),
+                user.getAvatar(),
+                user.getStatus(),
+                user.getRole()
+        );
+    }
+
+    /**
+     * Creates a pageable object based on the provided parameters.
+     *
+     * @param page the page number
+     * @param size the page size
+     * @param sort the sort order
+     * @return the pageable object
+     */
+    private Pageable createPageable(int page, int size, String sort) {
+        PageableState pageableState = parseSortOption(sort.trim().toLowerCase());
+        return switch (pageableState) {
+            case ASC -> PageRequest.of(page, size, Sort.by("name").ascending());
+            case DESC -> PageRequest.of(page, size, Sort.by("name").descending());
+        };
+    }
+
+    /**
+     * Parses the sort option and returns the corresponding PageableState.
+     *
+     * @param sortOption the sort option
+     * @return the pageable state
      */
     private PageableState parseSortOption(String sortOption) {
         try {
             return PageableState.valueOf(sortOption.toUpperCase());
         } catch (IllegalArgumentException e) {
-            throw new ApplicationException(HttpStatus.BAD_REQUEST,
-                    "Invalid sort option. Use 'sender' or 'receiver' and 'asc' or 'desc'.");
+            throw new ApplicationException(HttpStatus.BAD_REQUEST, "Invalid sort option. Use 'asc' or 'desc'.");
         }
     }
 
     /**
-     * Retrieves the currently authenticated user's profile.
-     * Accessible by users with DEFAULT or ADMIN roles.
-     *
-     * @param request the HTTP request
-     * @return the UserProfileResponse of the authenticated user
-     */
-    @PreAuthorize("hasAnyRole('ROLE_DEFAULT', 'ROLE_ADMIN')")
-    @ResponseStatus(HttpStatus.OK)
-    @GetMapping(path = "/me", produces = "application/json")
-    public ResponseEntity<UserProfileResponse> getUser(HttpServletRequest request) {
-        UserProfile userProfile = userProfileService.getUser(request);
-        UserProfileResponse userProfileResponse = userProfileMapper.toResponse(
-                new UserProfileRequest(
-                        userProfile.getId(),
-                        userProfile.getName(),
-                        userProfile.getSurname(),
-                        userProfile.getDateOfBirth(),
-                        userProfile.getCountryOfOrigin(),
-                        userProfile.getEmail(),
-                        userProfile.getPassword(),
-                        userProfile.getPhoneNumber(),
-                        userProfile.getAvatar(),
-                        userProfile.getStatus(),
-                        userProfile.getRole()
-                )
-        );
-        return ResponseEntity.ok(userProfileResponse);
-    }
-
-    /**
-     * Retrieves a user profile by its ID.
-     * Only accessible by users with the ADMIN role.
-     *
-     * @param request the HTTP request
-     * @param userId  the ID of the user profile to retrieve
-     * @return the UserProfileResponse containing the user's details
-     */
-    @PreAuthorize("hasRole('ROLE_ADMIN')")
-    @ResponseStatus(HttpStatus.OK)
-    @GetMapping(path = "/{id}", produces = "application/json")
-    public ResponseEntity<UserProfileResponse> getUserById(HttpServletRequest request,
-                                                           @PathVariable("id") UUID userId) {
-        logInfo("Getting user info ...");
-        UserProfile userProfile = userProfileService.getUserById(request, userId);
-        UserProfileResponse userProfileResponse = userProfileMapper.toResponse(
-                new UserProfileRequest(
-                        userProfile.getId(),
-                        userProfile.getName(),
-                        userProfile.getSurname(),
-                        userProfile.getDateOfBirth(),
-                        userProfile.getCountryOfOrigin(),
-                        userProfile.getEmail(),
-                        userProfile.getPassword(),
-                        userProfile.getPhoneNumber(),
-                        userProfile.getAvatar(),
-                        userProfile.getStatus(),
-                        userProfile.getRole()
-                )
-        );
-        return ResponseEntity.ok(userProfileResponse);
-    }
-
-    /**
-     * Updates the currently authenticated user's profile.
-     * Accessible by users with the DEFAULT role.
-     *
-     * @param request       the HTTP request
-     * @param updateRequest the request containing updated user data
-     * @return a UserTokenResponse containing the new token for the user
-     * @throws Exception if the update process fails
-     */
-    @PreAuthorize("hasRole('ROLE_DEFAULT')")
-    @ResponseStatus(HttpStatus.OK)
-    @PatchMapping(path = "/me", consumes = "application/json", produces = "application/json")
-    public ResponseEntity<UserTokenResponse> updateUser(HttpServletRequest request,
-                                                        @Valid @RequestBody
-                                                        UserUpdateRequest updateRequest) throws Exception {
-        logInfo("Updating user data ...");
-        UserProfile userProfile = userProfileService.updateUser(request, updateRequest);
-        return generateUserTokenResponse(userProfile);
-    }
-
-    /**
-     * Updates specific credentials of a user profile by its ID.
-     * Only accessible by users with the ADMIN role.
-     *
-     * @param request       the HTTP request
-     * @param userId        the ID of the user profile to update
-     * @param updateRequest the request containing updated user credentials
-     * @return a UserTokenResponse containing the new token for the user
-     */
-    @PreAuthorize("hasRole('ROLE_ADMIN')")
-    @ResponseStatus(HttpStatus.OK)
-    @PatchMapping(path = "/{id}", consumes = "application/json", produces = "application/json")
-    public ResponseEntity<UserTokenResponse> updateUserSpecificCredentials(HttpServletRequest request,
-                                                                           @PathVariable("id") UUID userId,
-                                                                           @Valid @RequestBody
-                                                                           AdminUpdateUserRequest updateRequest) {
-        logInfo("Updating specific user credentials ...");
-        UserProfile userProfile = userProfileService.updateUserSpecificCredentials(request, userId, updateRequest);
-        return generateUserTokenResponse(userProfile);
-    }
-
-    /**
-     * Manages the user avatar by uploading or removing it.
-     * Accessible by users with the DEFAULT role.
+     * Handles the user avatar action (upload or remove).
      *
      * @param request    the HTTP request
-     * @param action     the action to perform (upload or remove)
-     * @param userAvatar the user avatar image file
-     * @return a UserTokenResponse containing the new token for the user
-     */
-    @PreAuthorize("hasRole('ROLE_DEFAULT')")
-    @ResponseStatus(HttpStatus.OK)
-    @PatchMapping(path = "/me/avatar", consumes = "multipart/form-data", produces = "application/json")
-    public ResponseEntity<UserTokenResponse> manageUserAvatar(HttpServletRequest request,
-                                                              @RequestParam("action") String action,
-                                                              @RequestParam(value = "user_avatar", required = false)
-                                                              MultipartFile userAvatar) {
-        handleUserAvatarAction(request, action, userAvatar);
-        UserProfile userProfile = userProfileService.getUser(request);
-        return generateUserTokenResponse(userProfile);
-    }
-
-    /**
-     * Generates a UserTokenResponse containing the user's token.
-     * This method is used after updating the user profile to provide the user with a new token.
-     * The token is used for authentication and authorization.
-     * The token is generated by the userProfileService.
-     * The UserTokenResponse is returned as a ResponseEntity with an HTTP status of OK.
-     * The response body contains the token.
-     *
-     * @param userProfile the user profile for which to generate the token
-     * @return a ResponseEntity containing the UserTokenResponse
-     */
-    private ResponseEntity<UserTokenResponse> generateUserTokenResponse(UserProfile userProfile) {
-        String token = userProfileService.generateToken(userProfile);
-        UserTokenResponse userResponse = new UserTokenResponse(token);
-        return ResponseEntity.ok(userResponse);
-    }
-
-    /**
-     * Handles the user avatar action by uploading or removing the avatar image.
-     * The action is specified as a string and can be either 'upload' or 'remove'.
-     * If the action is 'upload', the user avatar image is uploaded.
-     * If the action is 'removed', the user avatar image is removed.
-     * If the action is invalid, an ApplicationException is thrown with a BAD_REQUEST status.
-     *
-     * @param request    the HTTP request
-     * @param action     the action to perform (upload or remove)
-     * @param userAvatar the user avatar image file
+     * @param action     the action to perform
+     * @param userAvatar the user avatar file
      */
     private void handleUserAvatarAction(HttpServletRequest request, String action, MultipartFile userAvatar) {
         switch (action.toLowerCase()) {
@@ -319,80 +325,12 @@ public class UserProfileController {
     }
 
     /**
-     * Updates the user role by changing the user's role to the specified role.
-     * Only accessible by users with the ADMIN role.
+     * Logs an informational message.
      *
-     * @param request the HTTP request
-     * @param userId  the ID of the user profile to update
-     * @return a ResponseEntity with an HTTP status of NO_CONTENT
-     */
-    @PreAuthorize("hasRole('ROLE_ADMIN')")
-    @ResponseStatus(HttpStatus.NO_CONTENT)
-    @PatchMapping(path = "/role/{id}", produces = "application/json")
-    public ResponseEntity<Void> updateUserRole(HttpServletRequest request, @PathVariable("id") UUID userId) {
-        logInfo("Updating user role ...");
-        userProfileService.updateUserRole(request, userId);
-        return ResponseEntity.noContent().build();
-    }
-
-    /**
-     * Updates the user status by changing the user's status to the specified status.
-     * Only accessible by users with the ADMIN role.
-     *
-     * @param request the HTTP request
-     * @param userId  the ID of the user profile to update
-     * @return a ResponseEntity with an HTTP status of NO_CONTENT
-     */
-    @PreAuthorize("hasRole('ROLE_ADMIN')")
-    @ResponseStatus(HttpStatus.NO_CONTENT)
-    @PatchMapping(path = "/status/{id}", produces = "application/json")
-    public ResponseEntity<Void> updateUserStatus(HttpServletRequest request,
-                                                 @PathVariable("id") UUID userId) {
-        logInfo("Updating user status ...");
-        userProfileService.updateUserStatus(request, userId);
-        return ResponseEntity.noContent().build();
-    }
-
-    /**
-     * Deletes the currently authenticated user's profile.
-     * Accessible by users with the DEFAULT role.
-     *
-     * @param request the HTTP request
-     * @return a ResponseEntity with an HTTP status of NO_CONTENT
-     */
-    @PreAuthorize("hasRole('ROLE_DEFAULT')")
-    @ResponseStatus(HttpStatus.NO_CONTENT)
-    @DeleteMapping(path = "/me")
-    public ResponseEntity<Void> deleteMyProfile(HttpServletRequest request) {
-        logInfo("Deleting user ...");
-        userProfileService.deleteUser(request);
-        return ResponseEntity.noContent().build();
-    }
-
-    /**
-     * Deletes a user profile by its ID.
-     * Only accessible by users with the ADMIN role.
-     *
-     * @param request the HTTP request
-     * @param userId  the ID of the user profile to delete
-     * @return a ResponseEntity with an HTTP status of NO_CONTENT
-     */
-    @PreAuthorize("hasRole('ROLE_ADMIN')")
-    @ResponseStatus(HttpStatus.NO_CONTENT)
-    @DeleteMapping(path = "/{id}")
-    public ResponseEntity<Void> deleteUserProfile(HttpServletRequest request, @PathVariable("id") UUID userId) {
-        logInfo("Deleting user ...");
-        userProfileService.deleteUserByEmail(request, userId);
-        return ResponseEntity.noContent().build();
-    }
-
-    /**
-     * Logs informational messages to the console.
-     *
-     * @param message The message to log.
-     * @param args    Optional arguments to format the message.
+     * @param message the message to log
+     * @param args    the message arguments
      */
     private void logInfo(String message, Object... args) {
-        LOG.info(message, args);
+        log.info(message, args);
     }
 }
